# Bodil-Device

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  bluetooth.c  bluetooth.h  bodil_IoT.c  bodil_IoT.h  client.c  client.h  conn_handlers.c  conn_handlers.h  customer_info.c  customer_info.h  data.h  gsm.c  gsm.h  heat_pump_state.c  heat_pump_state.h  idf_component.yml  led_control.c  led_control.h  led_control_sim.c  led_control_sim.h  machine_control.c  machine_control.h  mqtt.c  mqtt_service.c  mqtt_service.h  non_volatile_memory.c  non_volatile_memory.h  ota_update.c  ota_update.h  sim_network.c  sim_network.h  utils.c  utils.h  wifi_connection.c  wifi_connection.h
