idf_component_register(SRCS "ota_update.c" "led_control.c" "conn_handlers.c" "sim_network.c" "utils.c" "mqtt_service.c" "non_volatile_memory.c" "customer_info.c" "machine_control.c" "heat_pump_state.c" "bluetooth.c" "bodil_IoT.c" "wifi_connection.c" "client.c" "bluetooth.c"
                    INCLUDE_DIRS ".")
